Update abstract.tex with German and English abstracts

--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -1,24 +1,9 @@
-% --- English Abstract ---------------------------------------------------
+% --- German Abstract ---------------------------------------------------
 
 \thispagestyle{scrplain}
 
 \section*{Kurzfassung}
 
-(Z.B. ``Diese Arbeit beschäftigt sich mit...'')
-
-\blindtext
-
-\newpage
-% --- German Abstract ----------------------------------------------------
-
-\begin{otherlanguage}{english}
-\thispagestyle{scrplain}
-
-\section*{Abstract}
-
-(E.g. ``This thesis deals with...'')
-
-\blindtext
-
-\end{otherlanguage}
-
+Diese Ausarbeitung beschäftigt sich mit den Basisprotokollen der LVA Kryptografische Protokolle. Es werden die Grundlagen der RSA Ver-/Entschlüsselung sowie der Schlüsselgenerierung, der skalare Multiplikation von elliptischen Kurven, der DSA Signaturgenerierung und Verifizierung beschrieben.
+Weiteres wird auf eine grundlegende Implementierung des Lesens/Generierens und Verifizierens von X.509v3 Zertifikaten, HMAC, Hashing, sowie des Ver- und Entschlüsseln von beliebigen Texten mit AES eingegangen.
+Eine Grundlegende Implementierung eines Client-Server Systems wird ebenfalls behandelt.
