Update titlepage.tex with new main title and author name

--- a/doc/titlepage.tex
+++ b/doc/titlepage.tex
@@ -4,65 +4,26 @@
   \includegraphics[width=4.5cm]{figures/FH_Campus_Wien_Logo.pdf}
 
   \center
+  \large
 
   \vspace{-0.5cm}
 
-  \hspace*{-1.0cm} {\LARGE \textbf{Haupttitel (Deutsch)\\}}
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} Untertitel (Deutsch) \\
-
-  \vspace{1cm}
-
-  \hspace*{-1.0cm} {\LARGE \textbf{Haupttitel (Englisch)\\}}
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} Untertitel (Englisch) \\
-
-  \vspace{2.7cm}
-
-  \hspace*{-1.0cm} {\LARGE \textbf{Masterarbeit\\}}
-
-  \vspace{0.65cm}
-
-  \hspace*{-1.0cm} Zur Erlangung des akademischen Grades \\
-
-  \vspace{0.65cm}
-
-  \hspace*{-1.0cm} \textbf{Master of Science in Engineering\\}
-
-  \vspace{0.65cm}
-
-  \hspace*{-1.0cm} der Fachhochschule Campus Wien \\
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} Masterstudiengang: xxxxxxxxxxxxxxxxxxxxx \\
-
-  \vspace{1.6cm}
-
-  \hspace*{-1.0cm} \textbf{Vorgelegt von:} \\
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} Vorname Nachname \\
+  {\LARGE \textbf{Kryptografische Protokolle\\}}
+  \vspace{0.2em}
+  Basics
 
   \vspace{0.7cm}
 
-  \hspace*{-1.0cm} \textbf{Personenkennzeichen:}\\
+  \textbf{Vorgelegt von:} \\
   \vspace{0.2cm}
-  \hspace*{-1.0cm} Zahl \\
+  Thomas Leber \\
 
   \vspace{0.7cm}
 
-  \hspace*{-1.0cm} \textbf{ErstbetreuerIn / ErstbegutachterIn:} \\
+  \textbf{Personenkennzeichen:}\\
   \vspace{0.2cm}
-  \hspace*{-1.0cm} Titel Vorname Nachname \\
+  c2310537015 \\
 
   \vspace{0.7cm}
 
-  \hspace*{-1.0cm} \textbf{ZweitbetreuerIn / ZweitbegutachterIn: (optional)} \\
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} Titel Vorname Nachname \\
-
-
-  \vspace{0.7cm}
-
-  \hspace*{-1.0cm} \textbf{Eingereicht am:} \\
-  \vspace{0.2cm}
-  \hspace*{-1.0cm} tt.mm.jjjj \\
 \end{titlepage}
