--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -1,59 +1,14 @@
-@BOOK{Hankerson2004,
-  title = {{G}uide to {E}lliptic {C}urve {C}ryptography},
-  publisher = {Springer-Verlag New York},
-  year = {2004},
-  author = {Darrel Hankerson and Alfred Menezes and Scott Vanstone},
-  pages = {309},
-  series = {Springer Professional Computing},
-  file = {Hankerson-GuideToEllipticCurveCryptography.pdf:Z\:\\da\\Papers\\Hankerson-GuideToEllipticCurveCryptography.pdf:PDF},
-  owner = {mkoschuch},
-  timestamp = {2006.08.03}
-}
-
-@ARTICLE{Koc1998,
-  author = {Cetin K. Koc and Tolga Acar},
-  title = {{M}ontgomery {M}ultiplication in {GF}(2k)},
-  journal = {Designs, Codes and Cryptography},
-  year = {1998},
-  volume = {14},
-  pages = {57-69},
-  number = {1},
-  month = {April},
-  abstract = {We show that the multiplication operation c = a * b * r^-1 in the
-	field GF(2k) can be implemented
-	
-	significantly faster in software than the standard multiplication,
-	where r is a special fixed element of the field. This
-	
-	operation is the finite field analogue of the Montgomery multiplication
-	for modular multiplication of integers. We
-	
-	give the bit-level and word-level algorithms for computing the product,
-	perform a thorough performance analysis,
-	
-	and compare the algorithm to the standard multiplication algorithm
-	in GF(2k). The Montgomery multiplication
-	
-	can be used to obtain fast software implementations of the discrete
-	exponentiation operation, and is particularly
-	
-	suitable for cryptographic applications where k is large.},
-  doi = {10.1023/A:1008208521515},
-  file = {kos_monty.pdf:Z\:\\da\\Papers\\kos_monty.pdf:PDF},
-  owner = {Mdk},
-  timestamp = {2007.08.27}
-}
-
-@INPROCEEDINGS{Koschuch2006,
-  author = {Manuel Koschuch and Joachim Lechner and Andreas Weitzer and Johann
-	Gro{\ss}sch{\"a}dl and Alexander Szekely and Stefan Tillich and Johannes
-	Wolkerstorfer},
-  title = {{H}ardware/{S}oftware {C}o-{D}esign of {E}lliptic {C}urve {C}ryptography
-	on an 8051 {M}icrocontroller},
-  booktitle = {L. Goubin and M. Matsui (Eds.): CHES 2006},
-  year = {2006},
-  pages = {430-444},
-  file = {8051ECC.pdf:Z\:\\da\\Papers\\read\\8051ECC.pdf:PDF},
-  owner = {Mdk},
-  timestamp = {2007.05.31}
+@misc{rfc8017,
+  series       = {Request for Comments},
+  number       = 8017,
+  howpublished = {RFC 8017},
+  publisher    = {RFC Editor},
+  doi          = {10.17487/RFC8017},
+  url          = {https://www.rfc-editor.org/info/rfc8017},
+  author       = {Kathleen Moriarty and Burt Kaliski and Jakob Jonsson and Andreas Rusch},
+  title        = {{PKCS \#1: RSA Cryptography Specifications Version 2.2}},
+  pagetotal    = 78,
+  year         = 2016,
+  month        = nov,
+  abstract     = {This document provides recommendations for the implementation of public-key cryptography based on the RSA algorithm, covering cryptographic primitives, encryption schemes, signature schemes with appendix, and ASN.1 syntax for representing keys and for identifying the schemes. This document represents a republication of PKCS \#1 v2.2 from RSA Laboratories' Public-Key Cryptography Standards (PKCS) series. By publishing this RFC, change control is transferred to the IETF. This document also obsoletes RFC 3447.}
 }
