Update chapter title in rsa.tex

--- a/doc/rsa.tex
+++ b/doc/rsa.tex
@@ -1,4 +1,4 @@
-\chapter{RSA}
+\chapter{Ver-/Entschlüsselung sowie Schlüsselgenerierung mit RSA}
 
 \section{Implementierung}
 Die \gls{rsa} Implementierung ist in zwei Klassen aufgeteilt.
