Update settings and EC class

--- a/doc/ec.tex
+++ b/doc/ec.tex
@@ -1,7 +1,10 @@
-\chapter{RSA}
+\chapter{Skalare Multiplikation auf elliptischen Kurven}
 
 \section[Implementierung]
-asdsadsadsda
+Die Implementierung besteht aus zwei Klassen, die Klasse \texttt{EC} und die Sub-Klasse \texttt{ECPoint}.
+
+\section[EC]
+Die Klasse \texttt{EC} repräsentiert eine elliptische Kurve. Sie enthält die Koeffizienten $A$ und $B$ der elliptischen Kurve, sowie die den Feldparameter $q$.
 
 \section[Parameter]
 asdsadasdasasd
