--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -12,3 +12,15 @@
   month        = nov,
   abstract     = {This document provides recommendations for the implementation of public-key cryptography based on the RSA algorithm, covering cryptographic primitives, encryption schemes, signature schemes with appendix, and ASN.1 syntax for representing keys and for identifying the schemes. This document represents a republication of PKCS \#1 v2.2 from RSA Laboratories' Public-Key Cryptography Standards (PKCS) series. By publishing this RFC, change control is transferred to the IETF. This document also obsoletes RFC 3447.}
 }
+
+@article{891000,
+  author   = {},
+  journal  = {IEEE Std 1363-2000},
+  title    = {IEEE Standard Specifications for Public-Key Cryptography},
+  year     = {2000},
+  volume   = {},
+  number   = {},
+  pages    = {1-228},
+  keywords = {IEEE standards;digital signature;encryption;key agreement;public-key cryptography},
+  doi      = {10.1109/IEEESTD.2000.92292}
+}
