Add NAF calculation and point subtraction

--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -24,3 +24,11 @@
   keywords = {IEEE standards;digital signature;encryption;key agreement;public-key cryptography},
   doi      = {10.1109/IEEESTD.2000.92292}
 }
+
+@misc{enwiki:1153415896,
+  author       = {{Wikipedia contributors}},
+  title        = {Non-adjacent form --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2023},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Non-adjacent_form&oldid=1153415896}},
+  note         = {[Online; accessed 21-March-2024]}
+}
