--- a/doc/ec.tex
+++ b/doc/ec.tex
@@ -4,15 +4,12 @@
 Die Implementierung der \gls{ec} besteht aus zwei Klassen, die Klasse \texttt{EC} und die Sub-Klasse \texttt{ECPoint}.
 
 \subsection{Klasse: EC}
-Die Klasse \texttt{EC} repräsentiert eine elliptische Kurve. Sie enthält die Koeffizienten $A$ und $B$ der elliptischen Kurve, sowie die den Feldparameter $q$. Es werden drei Funktionen bereitgestellt um Berechnungen auf der Kurve durchzuführen: \texttt{scalarMultiplication}, \texttt{pointAddition} and \texttt{pointSubtraction}.
-
+Die Klasse \texttt{EC} repräsentiert eine elliptische Kurve. Sie enthält die Koeffizienten $A$ und $B$ der elliptischen Kurve, sowie die den Feldparameter $q$. Es werden drei Funktionen bereitgestellt um Berechnungen auf der Kurve durchzuführen:
 \subsubsection{scalarMultiplication}
-Die Skalare Multiplikation erfolgt durch die Methode \texttt{scalarMultiplication}. Der Algorithmus basiert auf der Additions-Subtraktion-Methode. Der Skalar wird in ein \gls{naf} Array nach \cite{enwiki:1153415896} mit $NAF = \{1,0-1\}$ umgewandelt und die Methoden zu Addition und Subtraktion werden aufgerufen \cite{891000}.
+Die Skalare Multiplikation erfolgt durch die Methode \texttt{scalarMultiplication}. Der Algorithmus basiert auf der Additions-Subtraktion-Methode. Der Skalar wird in ein \gls{naf} Array nach \cite{enwiki:1153415896} umgewandelt und die Methoden zu Addition und Subtraktion werden aufgerufen \cite{891000}.
 
 \subsubsection{pointAddition/pointSubtraction}
-Die Punktaddition erfolgt durch die Methode \texttt{pointAddition}. Die Methode berechnet die Summe zweier Punkte auf der elliptischen Kurve. Die Methode basiert auf der in \cite{891000} aufgeführten Formel für die Punktaddition auf elliptischen Kurven.
-
-Die Punktsubtraktion erfolgt durch die Methode \texttt{pointSubtraction}. Die Methode is nur ein Wrapper für die Punktaddition mit dem negierten Punkt.
+Die Punktaddition erfolgt durch die Methode \texttt{pointAddition}. Die Methode berechnet die Summe zweier Punkte auf der elliptischen Kurve. Die Methode basiert auf der in \cite{891000} aufgeführten Formel für die Punktaddition auf elliptischen Kurven. Die Punktsubtraktion erfolgt durch die Methode \texttt{pointSubtraction}. Die Methode is nur ein Wrapper für die Punktaddition mit dem negierten Punkt.
 
 \subsection{Klasse: ECPoint}
 Die Klasse \texttt{ECPoint} repräsentiert einen Punkt auf einer elliptischen Kurve. Sie enthält die Koordinaten $x$ und $y$ des Punktes. Die Klasse enthält die Methode \texttt{negate}, die den Punkt negiert und die Methode \texttt{equals}, die zwei Punkte auf Gleichheit prüft. Zusätzlich enthält die Klasse die Methode \texttt{isOnCurve}, die prüft ob der Punkt auf der Kurve liegt.
