--- a/doc/dsa.tex
+++ b/doc/dsa.tex
@@ -2,6 +2,8 @@
 
 \section{Implementierung}
 
+Alle Berechnungen wurden aus \cite{enwiki:1194947270} abgeleitet.
+
 \subsection{Initialisierung}
 Die DSA Implementierung stellt einen Constructor bereit, welchem die Bitgößen für $l$ und $n$ übergeben werden. Der Constructor wählt aus der Hash Klasse einen Algorithmus der Größe $n$-Bits aus. Danach werden drei Funktionen aufgerufen:
 \begin{itemize}
@@ -13,11 +15,11 @@ Die DSA Implementierung stellt einen Constructor bereit, welchem die Bitgößen 
 \subsubsection{generatePQ}
 Die Parameter $l$ und $n$ werden für die Erzeugung von $p$ und $q$ benötigt. Die Methode \texttt{generatePQ} erzeugt $p$ und $q$ und speichert diese in den Feldern \texttt{p} und \texttt{q}.
 
-Zuerst wird $q$ erzeugt von der Länger $n$-Bits. Danach wird ein Initalwert von $p$ erzeugt. Da $p$ ein multiplikatives Vielfaches von $q$ plus 1 sein muss, wird $p$ um $l-n$ Bits nach links geschoben (was einer Multiplikation von $q$ mit $2^{l-n}$ entspricht) und um 1 erhöht. Danach wird solange $q$ auf $p$ addiert, bis $p$ eine Primzahl ist.
-Falls $q$ größer als $l$ Bits wird, ein neues $q$ erzeugt und der Vorgang wiederholt.
+Zuerst wird $q$ erzeugt von der Länger $n$-Bits. Danach wird ein Initalwert von $p$ erzeugt. Da $p$ ein multiplikatives Vielfaches von $q$ plus 1 sein muss, wird $p$ um $l-n$ Bits nach links geschoben (was einer Multiplikation von $q$ mit $2^{l-n}$ entspricht) und um 1 erhöht. Das hat den Vorteil das die angegebene Bitbreite komplett ausgenutzt wird. Danach wird solange $q$ auf $p$ addiert, bis $p$ eine Primzahl ist.
+Falls $q$ größer als $l$ Bits wird, ein neues $q$ erzeugt und der Vorgang wiederholt
 
 \subsubsection{generateG}
-Der Einfachheit halber wird $h$ auf 2 gesetzt. Danach wird $g$ erzeugt, indem $h^{(p-1)/q} \mod p$ berechnet wird. Falls das Ergebnis 1 ist, wird $g$ neu berechnet.
+Der Einfachheit halber wird $h$ auf 2 gesetzt. Danach wird $g$ erzeugt, indem $h^{(p-1)/q} \mod p$ berechnet wird. Falls das Ergebnis 1 ist, wird $h$ inkrementiert und $g$ neu berechnet.
 
 \subsubsection{generateKeys}
 Die Methode \texttt{generateKeys} erzeugt den öffentlichen Schlüssel $y$ und den privaten Schlüssel $x$. $x$ wird zufällig erzeugt in $\{1 ... q-1$\}. $y$ wird berechnet, indem $g^x \mod p$ berechnet wird.
@@ -33,7 +35,6 @@ Die Parameter $l$ und $n$ werden im Constructor übergeben. $l$ ist die Länge d
 
 Zulässig sind folgende Kombinationen:
 \begin{itemize}
-    \item $l = 1024, n = 160$
     \item $l = 2048, n = 224$
     \item $l = 2048, n = 256$
     \item $l = 3072, n = 256$
