--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -32,3 +32,26 @@
   howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Non-adjacent_form&oldid=1153415896}},
   note         = {[Online; accessed 21-March-2024]}
 }
+
+@misc{rfc6979,
+  series       = {Request for Comments},
+  number       = 6979,
+  howpublished = {RFC 6979},
+  publisher    = {RFC Editor},
+  doi          = {10.17487/RFC6979},
+  url          = {https://www.rfc-editor.org/info/rfc6979},
+  author       = {Thomas Pornin},
+  title        = {{Deterministic Usage of the Digital Signature Algorithm (DSA) and Elliptic Curve Digital Signature Algorithm (ECDSA)}},
+  pagetotal    = 79,
+  year         = 2013,
+  month        = aug,
+  abstract     = {This document defines a deterministic digital signature generation procedure. Such signatures are compatible with standard Digital Signature Algorithm (DSA) and Elliptic Curve Digital Signature Algorithm (ECDSA) digital signatures and can be processed with unmodified verifiers, which need not be aware of the procedure described therein. Deterministic signatures retain the cryptographic security features associated with digital signatures but can be more easily implemented in various environments, since they do not need access to a source of high-quality randomness.}
+}
+
+@misc{enwiki:1194947270,
+  author       = {{Wikipedia contributors}},
+  title        = {Digital Signature Algorithm --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2024},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Digital_Signature_Algorithm&oldid=1194947270}},
+  note         = {[Online; accessed 24-March-2024]}
+}
