Fix section headings in template.tex

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -1,8 +1,8 @@
 \chapter{RSA}
 
-\section[Implementierung]
+\section{Implementierung}
 asdsadsadsda
 
-\section[Parameter]
+\section{Parameter}
 asdsadasdasasd
 
