Add send() method to Client for sending data to the server

--- a/doc/network.tex
+++ b/doc/network.tex
@@ -13,5 +13,5 @@ Der Server verwaltet eine liste von Clients, die er kennt. Der Server kann auch 
 
 \subsection{Client}
 Der Client leitet alle Daten von stdin an den Server weiter. Antworten vom Server werden auf stdout ausgegeben.
-
+Zusätzlich kann die Methode \texttt{send()} aufgerufen werden, um Daten an den Server zu senden.
 
