Add new acronyms for DSA, SHA, HMAC, AES, ECB, and CBC

--- a/doc/acronyms.tex
+++ b/doc/acronyms.tex
@@ -1,3 +1,10 @@
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
 \newacronym{ec}{EC}{Elliptic Curve}
 \newacronym{naf}{NAF}{non-Adjacent Form}
+\newacronym{dsa}{DSA}{Digital Signature Algorithm}
+\newacronym{sha}{SHA}{Secure Hash Algorithm}
+\newacronym{hmac}{HMAC}{Hash-based Message Authentication Code}
+\newacronym{aes}{AES}{Advanced Encryption Standard}
+\newacronym{ecb}{ECB}{Electronic Codebook}
+\newacronym{cbc}{CBC}{Cipher Block Chaining}
+
