--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -55,3 +55,11 @@
   howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Digital_Signature_Algorithm&oldid=1194947270}},
   note         = {[Online; accessed 24-March-2024]}
 }
+
+@misc{bouncy01,
+  author       = {Various},
+  title        = {{B}ouncy {C}astle, {A}ttr{C}ert{E}xample.java {E}xample},
+  howpublished = {\url{https://raw.githubusercontent.com/bcgit/bc-java/1c34996c9b89e87f8755e9a07a3addbdd9b2ce86/misc/src/main/java/org/bouncycastle/jcajce/examples/AttrCertExample.java}},
+  year         = {},
+  note         = {[Accessed 25-03-2024]}
+}
