Update chapter titles in documentation

--- a/doc/aes.tex
+++ b/doc/aes.tex
@@ -1,4 +1,4 @@
-\chapter{SymCrypt}
+\chapter{Symmetrische Verschlüsselung}
 
 \section{Implementierung}
 Die Klasse \texttt{SymCrypt} implementiert den \gls{aes} Algorithmus mittel \gls{ecb} und \gls{cbc} Mode. Beide Modes können mit PKCS5 Padding verwendet werden. Der Constructor der Klasse \texttt{SymCrypt} erwartet einen \texttt{String} als Passwort und einen \texttt{String} für den Algorithmus (eg. \glqq AES/CBC/NoPadding\grqq, \glqq AES/ECB/PKCS5Padding\grqq , ...).
