--- a/doc/x509.tex
+++ b/doc/x509.tex
@@ -1,4 +1,4 @@
-\chapter{X509}
+\chapter{x509 Zertifikate}
 
 \section{Implementierung}
 Die x509 Implementierung ist von \cite{bouncy01} inspiriert und erstellt ein minimales x509 Zertifikat mit einem \gls{rsa} Schlüssel und einem \gls{sha} mit 160 Bit (SHA1).
