Add new acronyms and explanations

--- a/doc/acronyms.tex
+++ b/doc/acronyms.tex
@@ -7,4 +7,5 @@
 \newacronym{aes}{AES}{Advanced Encryption Standard}
 \newacronym{ecb}{ECB}{Electronic Codebook}
 \newacronym{cbc}{CBC}{Cipher Block Chaining}
+\newacronym{x509}{X.509}{X.509 Zertifikate}
 
