--- a/doc/dsa.tex
+++ b/doc/dsa.tex
@@ -1,5 +1,8 @@
 \chapter{DSA Signatur}
 
+\section{Grundlagen}
+\gls{dsa} ist ein asymmetrisches Verschlüsselungsverfahren. Es basiert auf der Schwierigkeit des diskreten Logarithmusproblems auf endlichen Körpern. \gls{dsa} wird in der Praxis oft in Kombination mit dem \gls{sha} Algorithmus verwendet \cite{nist1991proposed}.
+
 \section{Implementierung}
 
 Alle Berechnungen in diesem Kapitel wurden aus \cite{enwiki:1194947270} abgeleitet.
