--- a/doc/ec.tex
+++ b/doc/ec.tex
@@ -1,5 +1,8 @@
 \chapter{Skalare Multiplikation auf elliptischen Kurven}
 
+\section{Grundlagen}
+\gls{ec} sind eine spezielle Art von algebraischen Kurven, die in der Kryptographie verwendet werden. Sie sind definiert durch die Gleichung $y^2 = x^3 + ax + b$. Die Skalare Multiplikation ist eine wichtige Operation in der Kryptographie, da sie zur Berechnung von Schlüsseln in der \gls{ec} verwendet wird \cite{Koblitz1987}.
+
 \section{Implementierung}
 Die Implementierung der \gls{ec} besteht aus zwei Klassen, die Klasse \texttt{EC} und die Sub-Klasse \texttt{ECPoint}.
 
