--- a/doc/hash.tex
+++ b/doc/hash.tex
@@ -1,6 +1,9 @@
 \chapter{Hash}
 \label{chap:hash}
 
+\section{Grundlagen}
+Ein \gls{sha} ist ein kryptographischer Code um die Integrität einer Nachricht zu gewährleisten oder wird als Komprimierung für eine nachfolgende Signatur verwendet. Ein Hash basiert in der Regel auf einem Algorithmus wie z.B. \gls{sha} \cite{rfc6234}.
+
 \section{Implementierung}
 Die Klasse \texttt{Hash} implementiert den \gls{sha} Algorithmus \glqq SHA-256\grqq, \glqq SHA-384\grqq und \glqq SHA-512\grqq.
 Der Constructor der Klasse \texttt{Hash} erwartet eine Bitlänge als Parameter.
